# CUDA-OpenGL-Basic-Interaction

./: CMakeLists.txt  CUDA-OpenGL-Basic-Interaction.sln  CUDA-OpenGL-Basic-Interaction.vcxproj  Makefile  README.md  interactions.h  kernel.cu  kernel.h  main.cpp  mainNoViz.cpp  mainViz.cpp  simMain.h
